--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Tic-Tac-Toe</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Press+Start+2P" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
-
+  <h1>Tic-Tac-Toe</h1>
+  <h2 class= "player-announcement">Click a cell to begin</h2>
+  <div class="board">
+    <div class="row">
+      <div class="grid" id="grid1"></div>
+      <div class="grid" id="grid2"></div>
+      <div class="grid" id="grid3"></div>
+    </div>
+    <div class="row">
+      <div class="grid" id="grid4"></div>
+      <div class="grid" id="grid5"></div>
+      <div class="grid" id="grid6"></div>
+    </div>
+    <div class="row">
+      <div class="grid" id="grid7"></div>
+      <div class="grid" id="grid2"></div>
+      <div class="grid" id="grid8"></div>
+    </div>
+  </div>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
