--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   <h2 class= "player-announcement">Click a cell to begin</h2>
   <div class="board">
     <div class="row">
-      <div class="grid" id="grid1" value="1"></div>
-      <div class="grid" id="grid2" value="2"></div>
-      <div class="grid" id="grid3" value="3"></div>
+      <div class="grid" id="grid1"></div>
+      <div class="grid" id="grid2"></div>
+      <div class="grid" id="grid3"></div>
     </div>
     <div class="row">
-      <div class="grid" id="grid4" value="4"></div>
-      <div class="grid" id="grid5" value="5"></div>
-      <div class="grid" id="grid6" value="6"></div>
+      <div class="grid" id="grid4"></div>
+      <div class="grid" id="grid5"></div>
+      <div class="grid" id="grid6"></div>
     </div>
     <div class="row">
-      <div class="grid" id="grid7" value="7"></div>
-      <div class="grid" id="grid8" value="8"></div>
-      <div class="grid" id="grid9" value="9"></div>
+      <div class="grid" id="grid7"></div>
+      <div class="grid" id="grid8"></div>
+      <div class="grid" id="grid9"></div>
     </div>
   </div>
   <script type="text/javascript" src="js/app.js"></script>
