--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Tic-Tac-Toe</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Press+Start+2P" rel="stylesheet">
+  <!-- <script type="text/javascript" src="js/app.js"></script> -->
 </head>
 <body>
   <h1>Tic-Tac-Toe</h1>
@@ -27,6 +28,11 @@
       <div class="grid" id="grid9"></div>
     </div>
   </div>
+
+  <div class="reset">
+    <button type="button" name="button" id="resetButton">Reset</button>
+  </div>
+
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
