--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 <body>
   <h1>Tic-Tac-Toe</h1>
-  <h2 class= "player-announcement">Click a cell to begin</h2>
+  <div class="reset">
+    <button type="radio" name="mode" class="optionSelect" id="singleplayer">Single Player</button>
+    <button type="radio" name="mode" class="optionSelect" id="multiplayer">Multi Player</button>
+    <button type="button" name="button" id="resetButton">Clear</button>
+
+  </div>
+  <h2 class= "player-announcement">Select Game Mode</h2>
   <div class="board">
     <div class="row">
       <div class="grid" id="grid1"></div>
@@ -27,10 +33,6 @@
       <div class="grid" id="grid8"></div>
       <div class="grid" id="grid9"></div>
     </div>
-  </div>
-
-  <div class="reset">
-    <button type="button" name="button" id="resetButton">Reset</button>
   </div>
 
   <script type="text/javascript" src="js/app.js"></script>
