added player icons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     <button type="radio" name="mode" class="optionSelect" id="singleplayer">Single Player</button>
     <button type="radio" name="mode" class="optionSelect" id="multiplayer">Multi Player</button>
     <button type="button" name="button" id="resetButton">Clear</button>
-
   </div>
+
   <h2 class= "player-announcement">Select Game Mode</h2>
+
+  <div class="reset">
+    <img class="picon" id="p1icon" src="http://icons.iconarchive.com/icons/ph03nyx/super-mario/128/Retro-Mushroom-Super-3-icon.png"/>
+    <img class="picon" id="p2icon" src="http://icons.iconarchive.com/icons/ph03nyx/super-mario/128/Retro-Mushroom-1UP-3-icon.png"/>
+  </div>
+
   <div class="board">
     <div class="row">
       <div class="grid" id="grid1"></div>
