--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
   <div class="board">
     <div class="row">
-      <div class="grid" id="grid1"></div>
-      <div class="grid" id="grid2"></div>
-      <div class="grid" id="grid3"></div>
+      <div class="gridcontainer"><div class="grid" id="grid1"></div></div>
+      <div class="gridcontainer"><div class="grid" id="grid2"></div></div>
+      <div class="gridcontainer"><div class="grid" id="grid3"></div></div>
     </div>
     <div class="row">
-      <div class="grid" id="grid4"></div>
-      <div class="grid" id="grid5"></div>
-      <div class="grid" id="grid6"></div>
+      <div class="gridcontainer"><div class="grid" id="grid4"></div></div>
+      <div class="gridcontainer"><div class="grid" id="grid5"></div></div>
+      <div class="gridcontainer"><div class="grid" id="grid6"></div></div>
     </div>
     <div class="row">
-      <div class="grid" id="grid7"></div>
-      <div class="grid" id="grid8"></div>
-      <div class="grid" id="grid9"></div>
+      <div class="gridcontainer"><div class="grid" id="grid7"></div></div>
+      <div class="gridcontainer"><div class="grid" id="grid8"></div></div>
+      <div class="gridcontainer"><div class="grid" id="grid9"></div></div>
     </div>
   </div>
 
